# 2025-p1-Moksh-Mehta7

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
