[project]
name = "week1"
version = "0.1.0"
description = ""
authors = [
    {name = "Moksh-Mehta7",email = "moksh.mehta@uq.net.au"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
